--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="ru">
 <head>
@@ -6,18 +8,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Project</title>
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'myapp1/css/myapp1.css' %}">
+    {% block head_content %}{% endblock %}
 </head>
 <body>
-<h1>Hello, World!</h1>
-{% for vacancy in vacancies %}
-    <div class="btn btn-success btn-lg">
-        Vacancy: {{ vacancy }}
-    </div>
-    <br>
-{% endfor %}
-<br>
-<br>
+{% block main_content %}
+{% endblock %}
 </body>
 </html>
