--- a/templates/relevance.html
+++ b/templates/relevance.html
@@ -4,3 +4,6 @@
 <title>Востребованность</title>
 {% endblock %}
 
+{% block main_content %}
+    {% include 'relevance_data.html' %}
+{% endblock %}
