add relevance data logic

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,11 +13,11 @@
         <div class="btn btn-success btn-lg">Ну нажимай, чё смотришь</div><br>
 
     </div>
-        <p class="hihihi">
-            {% for vacancy in vacancies %}
-                {{ vacancy }}
-            {% endfor %}
-        </p>
+{#        <p class="hihihi">#}
+{#            {% for vacancy in vacancies %}#}
+{#                {{ vacancy }}#}
+{#            {% endfor %}#}
+{#        </p>#}
 
 {#            <div class="btn btn-success btn-lg">#}
 {#                Vacancy: {{ vacancy }}#}
