--- a/templates/georgraphy_data.html
+++ b/templates/georgraphy_data.html
@@ -1,43 +1,41 @@
-{#{% extends 'layout.html' %}#}
 {% load static %}
-{##}
-{#{% block head_content %}#}
-{#{% endblock %}#}
-{##}
-{#{% block main_content %}#}
+
+{% block head_content %}
+{% endblock %}
+
+{% block main_content %}
 {#    <img src="{% static 'myapp1/img/{{ image_file }}' %}" {{ image_style }} alt="">#}
-{#    <h2 {{ h2_style }}>Статистика по городам</h2>#}
-{#    <table {{ table_style }} border="0" cellspacing="0" cellpadding="0">#}
-{#        <colgroup>#}
-{#            <col style="width: 20%">#}
-{#            <col style="width: 20%">#}
-{#            <col style="width: 7%">#}
-{#            <col style="width: 20%">#}
-{#            <col style="width: 20%">#}
-{#        </colgroup>#}
-{#        <tr>#}
-{#            {% for header in header_city %}#}
-{#            <th {% if not header %} {{ cell_style_none }} {% else %} {{ cell_style }} {% endif %}>#}
-{#                {{ header }}#}
-{#            </th>#}
-{#            {% endfor %}#}
-{#        </tr>#}
-{#        {% for index, (salary_city, salary, ratio_city, ratio) in city_data.items() %}#}
-{#        <tr>#}
-{#            <td {{ cell_style }}>#}
-{#                {{ salary_city }}#}
-{#            </td>#}
-{#            <td {{ cell_style }}>#}
-{#                {{ salary }}#}
-{#            </td>#}
-{#            <td></td>#}
-{#            <td {{ cell_style }}>#}
-{#                {{ ratio_city }}#}
-{#            </td>#}
-{#            <td {{ cell_style }}>#}
-{#                {{ ratio }}#}
-{#            </td>#}
-{#        </tr>#}
-{#        {% endfor %}#}
-{#    </table>#}
-{#{% endblock %}#}
+    <h2>Статистика по городам</h2>
+{#    <div>{{ statistics_by_cities }}</div>#}
+    <table>
+        <colgroup>
+            <col style="width: 25%">
+            <col style="width: 25%">
+            <col style="width: 25%">
+            <col style="width: 25%">
+        </colgroup>
+        <tr>
+            {% for header in header_city %}
+                <th>
+                    {{ header }}
+                </th>
+            {% endfor %}
+        </tr>
+        {% for city in statistics_by_cities %}
+        <tr>
+            <td>
+                {{ city.area_name }}
+            </td>
+            <td>
+                {{ city.total_count }}
+            </td>
+            <td>
+                {{ city.avg_salary|floatformat:"0" }}
+            </td>
+            <td>
+                {{ city.prof_count }}
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+{% endblock %}
