--- a/templates/georgraphy_data.html
+++ b/templates/georgraphy_data.html
@@ -14,6 +14,9 @@
             <col style="width: 25%">
             <col style="width: 25%">
         </colgroup>
+{#    <div>#}
+{#        {{ statistics_by_cities }}#}
+{#    </div>#}
         <tr>
             {% for header in header_city %}
                 <th>
