--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores debitis enim esse est et impedit
             inventore modi molestiae mollitia neque, nobis non numquam quas quis sint suscipit unde voluptate.
         </p>
-        <div class="btn btn-success btn-lg">Ну нажимай, чё смотришь</div><br>
+{#        <div class="btn btn-success btn-lg">Ну нажимай, чё смотришь</div><br>#}
 
     </div>
 {#        <p class="hihihi">#}
