--- a/templates/recent_vacancies.html
+++ b/templates/recent_vacancies.html
@@ -1,6 +1,45 @@
 {% extends "layout.html" %}
 
 {% block head_content %}
-<title>Последние вакансии</title>
+    <title>Последние вакансии</title>
 {% endblock %}
 
+{% block main_content %}
+    <table>
+        <thead>
+        {% for header in headers %}
+            <th>
+                {{ header }}
+            </th>
+        {% endfor %}
+        </thead>
+        <tbody>
+        {% for vac in vacancies %}
+            <tr>
+                <td>
+                    {{ vac.name }}
+                </td>
+                <td>
+                    {{ vac.description|truncatechars:200 }}
+                </td>
+                <td>
+                    {{ vac.key_skills }}
+                </td>
+                <td>
+                    {{ vac.salary }}
+                </td>
+                <td>
+                    {{ vac.company }}
+                </td>
+                <td>
+                    {{ vac.area_name }}
+                </td>
+                <td>
+                    {{ vac.published_at }}
+                </td>
+            </tr>
+
+        {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
