--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a96e6f375c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css">
+{#    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css">#}
     <link rel="stylesheet" href="{% static 'myapp1/css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'myapp1/css/myapp1.css' %}">
     {% block head_content %}{% endblock %}
@@ -18,8 +18,8 @@
 <body>
 <aside>
     <img src="{% static 'myapp1/img/python-logo.svg' %}" alt="Логотип Python">
-    <h1 class="logo">Python-программист</h1>
-    <h2>Навигация по сайту</h2>
+    <h1 class="panel-title">Python-программист</h1>
+    <h2 class="modal-title">Навигация по сайту</h2>
     <ul>
         <li>
             <a href="{% url 'home' %}"><i class="fa-solid fa-house"></i>Главная страница</a>
