--- a/templates/main.html
+++ b/templates/main.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block head_content %}
-    <title>Project</title>
+    <title>{{ title }}</title>
 {% endblock %}
 
 {% block main_content %}
     <div class="features">
-        <h3>Hello, World!</h3>
+        <h2>Hello, World!</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores debitis enim esse est et impedit
             inventore modi molestiae mollitia neque, nobis non numquam quas quis sint suscipit unde voluptate.
         </p>
