--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,52 +10,64 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a96e6f375c.js" crossorigin="anonymous"></script>
-    {#    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css">#}
     <link rel="stylesheet" href="{% static 'myapp1/css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'myapp1/css/myapp1.css' %}">
+    <link rel="icon" href="{% static 'myapp1/img/python-icon.ico' %}">
     {% block head_content %}{% endblock %}
 </head>
-<body>
-<div class="menu">
-    <div class="logo flex">
-        <img src="{% static 'myapp1/img/python-logo.svg' %}" alt="Логотип Python">
-        <h1 class="panel-title">Python-программист</h1>
-    </div>
-    <div class="aside-navigation">
-        <h3 class="">Навигация по сайту</h3>
-        <nav>
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-action list-group-item-dark relative">
-                    <a class="stretched-link" href="{% url 'home' %}"><i class="fa-solid fa-house"></i>Главная страница</a>
-                </li>
-                <li class="list-group-item list-group-item-action list-group-item-dark">
-                    <a class="stretched-link" href="{% url 'relevance' %}"><i class="fa-solid fa-star"></i>Востребованность</a>
-                </li>
-                <li class="list-group-item list-group-item-action list-group-item-dark">
-                    <a class="stretched-link" href="{% url 'geography' %}"><i class="fa-solid fa-location-dot"></i>География</a>
-                </li>
-                <li class="list-group-item list-group-item-action list-group-item-dark">
-                    <a class="stretched-link" href="{% url 'skills' %}"><i class="fa-solid fa-list"></i>Навыки</a>
-                </li>
-                <li class="list-group-item list-group-item-action list-group-item-dark">
-                    <a class="stretched-link" href="{% url 'recent-vacancies' %}"><i class="fa-solid fa-clock"></i>Последние
-                        вакансии</a>
-                </li>
-                <li class="list-group-item list-group-item-action list-group-item-success">
-                    <a class="stretched-link" href="{% url 'add-vacancy' %}">
-                        <i class="fa-solid fa-plus-circle"></i>Добавить запись
-                    </a>
-                </li>
-            </ul>
-        </nav>
 
-    </div>
-</div>
-<main>
+<body>
+<div>
+    <header class="menu">
+        <a href="{% url 'home' %}">
+            <div class="logo flex">
+                <img src="{% static 'myapp1/img/python-logo.svg' %}" alt="Логотип Python">
+                <h1 class="logo-title">Python-программист</h1>
+            </div>
+        </a>
+
+        <div class="aside-navigation">
+            <h3 class="">Навигация по сайту</h3>
+            <nav>
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-action list-group-item relative">
+                        <a class="stretched-link" href="{% url 'home' %}"><i class="fa-solid fa-house"></i>Главная страница
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-action list-group-item">
+                        <a class="stretched-link" href="{% url 'relevance' %}"><i class="fa-solid fa-star"></i>Востребованность
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-action list-group-item">
+                        <a class="stretched-link" href="{% url 'geography' %}"><i
+                                class="fa-solid fa-location-dot"></i>География
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-action list-group-item">
+                        <a class="stretched-link" href="{% url 'skills' %}">
+                            <i class="fa-solid fa-list"></i>Навыки
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-action list-group-item">
+                        <a class="stretched-link" href="{% url 'recent-vacancies' %}"><i
+                                class="fa-solid fa-clock"></i>Последние вакансии
+                        </a>
+                    </li>
+                    <li class="list-group-item list-group-item-action add-vacancy-button">
+                        <a class="stretched-link" href="{% url 'add-vacancy' %}">
+                            <i class="fa-solid fa-plus-circle"></i>Добавить запись
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+    </header>
     <div class="container-custom">
         {% block main_content %}
         {% endblock %}
     </div>
-</main>
+</div>
+
 </body>
 </html>
