--- a/templates/recent_vacancies.html
+++ b/templates/recent_vacancies.html
@@ -8,20 +8,11 @@
     {{ error_msg }}
     <form method="post">
         {% csrf_token %}
-        <label for="date_day">Выберите день</label>
+        <label for="date_day">Выберите прошедший день</label>
             {{ form.date }}
         <button type="submit" class="btn btn-primary">Готово</button>
     </form>
-    <table class="table">
-        <colgroup>
-            <col style="width: 10%">
-            <col style="width: 40%">
-            <col style="width: 15%">
-            <col style="width: 9%">
-            <col style="width: 7%">
-            <col style="width: 9%">
-            <col style="width: 9%">
-        </colgroup>
+    <table class="table table-striped table-bordered table-hover">
         <thead>
         {% for header in headers %}
             <th>
