--- a/templates/recent_vacancies.html
+++ b/templates/recent_vacancies.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
         <label for="date_day">Выберите прошедший день</label>
             {{ form.date }}
-        <button type="submit" class="btn btn-primary">Готово</button>
+        <button type="submit" class="btn btn-primary mb-10">Готово</button>
     </form>
     <table class="table table-striped table-bordered table-hover">
         <thead>
