--- a/static/myapp1/css/myapp1.css
+++ b/static/myapp1/css/myapp1.css
@@ -6,6 +6,12 @@
     --orange: #FFC600;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .flex {
     display: flex;
 }
@@ -38,6 +44,10 @@ h1, h2, h3, h4 {
     margin: 0;
 }
 
+h4 {
+    margin: 2% 0;
+}
+
 .logo {
     padding-top: 5%;
     align-items: center;
@@ -50,10 +60,19 @@ h1, h2, h3, h4 {
     color: var(--yellow);
 }
 
+.aside-navigation {
+    margin-bottom: 30vh;
+}
+
 .aside-navigation h3 {
     margin-bottom: 5%;
     text-align: center;
     color: antiquewhite;
+}
+
+.footer {
+    color: white;
+    font-weight: bold;
 }
 
 .container-custom {
@@ -63,12 +82,31 @@ h1, h2, h3, h4 {
     text-align: center;
 }
 
+.features {
+    font-size: 1.2rem;
+}
+
+.python-main {
+    margin-bottom: 2%;
+}
+
+.main-container {
+    flex-direction: column;
+}
+
+.main-description-img {
+    margin: 3% 0;
+    max-width: 100%;
+    max-height: 50%;
+}
+
 .container-custom h2, h3, h4, h5 {
     margin-bottom: 2%;
 }
 
 .relevance-graph, .cities-graph {
-    max-width: 100%;
+    max-width: 70%;
+    max-height: 70%;
 }
 
 .skills-table td {
@@ -90,4 +128,8 @@ h1, h2, h3, h4 {
 
 .add-vacancy-button:hover {
     background-color: lightgreen;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
 }
