--- a/templates/add_vacancy.html
+++ b/templates/add_vacancy.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main_content %}
-    <div class="features">
-    <h1>Добавление вакансии</h1>
+    <div class="container">
+    <h2>Добавление вакансии</h2>
         <form method="post">
             {% csrf_token %}
             {{ form.name }}<br>
@@ -14,9 +14,6 @@
             {{ form.salary }}<br>
             {{ form.area_name }}<br>
             {{ form.published_at }}<br>
-{#            <input type="text" class="form-control"><br>#}
-{#            <input type="text" class="form-control"><br>#}
-{#            <input type="number" class="form-control"><br>#}
             <span>{{ error_message }}</span>
             <button class="btn btn-success" type="submit">Добавить вакансию</button>
         </form>
