change table styles

--- a/templates/georgraphy_data.html
+++ b/templates/georgraphy_data.html
@@ -186,13 +186,7 @@
             </tbody>
         </table>
     {% else %}
-        <table class="table">
-            <colgroup>
-                <col style="width: 25%">
-                <col style="width: 25%">
-                <col style="width: 25%">
-                <col style="width: 25%">
-            </colgroup>
+        <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr>
                 {% for header in header_city %}
