--- a/templates/relevance_data.html
+++ b/templates/relevance_data.html
@@ -403,7 +403,7 @@
             </tbody>
         </table>
     {% else %}
-        <table class="table">
+        <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr>
                 {% for header in header_year %}
