--- a/templates/skills.html
+++ b/templates/skills.html
@@ -9,111 +9,97 @@
 
     {% if prerender %}
         <table class="table table-bordered table-hover skills-table">
-            <caption>{{ title }}</caption>
             <thead>
             <tr>
 
-                <th>
-                    Год
-                </th>
+                    <th>
+                        Год
+                    </th>
 
-                <th>
-                    Навыки<sup id="start"><a href="#finish">*</a></sup>
-                </th>
+                    <th>
+                        Навыки
+                    </th>
 
             </tr>
             </thead>
             <tbody>
 
-            <tr>
-                <td>
-                    2022
-                </td>
-                <td>
-                    SQL - 2,13%<br>Работа в команде - 2,01%<br>Английский язык - 1,80%<br>Git - 1,67%<br>Linux -
-                    1,35%<br>JavaScript - 1,16%<br>Python - 1,12%<br>Пользователь ПК - 1,11%<br>Грамотная речь -
-                    1,06%<br>Управление проектами - 1,04%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2022
+                    </td>
+                    <td>
+                        Python - 15,00%<br>Git - 6,79%<br>PostgreSQL - 6,03%<br>SQL - 5,79%<br>Linux - 5,34%<br>Django Framework - 5,30%<br>Docker - 3,30%<br>Английский язык - 2,52%<br>Flask - 2,06%<br>MySQL - 1,49%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2021
-                </td>
-                <td>
-                    SQL - 2,09%<br>Работа в команде - 1,94%<br>Английский язык - 1,79%<br>Git - 1,64%<br>Грамотная речь
-                    - 1,60%<br>Пользователь ПК - 1,41%<br>JavaScript - 1,32%<br>Linux - 1,28%<br>Python - 1,07%<br>Управление
-                    проектами - 1,00%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2021
+                    </td>
+                    <td>
+                        Python - 16,96%<br>Git - 7,23%<br>Django Framework - 6,68%<br>PostgreSQL - 5,68%<br>SQL - 5,54%<br>Linux - 5,22%<br>JavaScript - 2,05%<br>Английский язык - 1,98%<br>Flask - 1,71%<br>Docker - 1,69%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2020
-                </td>
-                <td>
-                    SQL - 2,05%<br>Git - 1,65%<br>Английский язык - 1,56%<br>JavaScript - 1,52%<br>Работа в команде -
-                    1,37%<br>Пользователь ПК - 1,37%<br>Linux - 1,33%<br>Грамотная речь - 1,20%<br>Java - 1,12%<br>HTML
-                    - 1,02%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2020
+                    </td>
+                    <td>
+                        Python - 16,83%<br>Django Framework - 6,69%<br>PostgreSQL - 6,51%<br>Git - 6,32%<br>Linux - 5,32%<br>SQL - 4,59%<br>JavaScript - 2,69%<br>MySQL - 2,18%<br>ООП - 1,63%<br>MongoDB - 1,48%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2019
-                </td>
-                <td>
-                    JavaScript - 1,94%<br>SQL - 1,57%<br>Git - 1,54%<br>HTML - 1,36%<br>Работа в команде - 1,23%<br>Английский
-                    язык - 1,21%<br>CSS - 1,20%<br>Пользователь ПК - 1,15%<br>Linux - 1,11%<br>Ведение переговоров -
-                    1,11%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2019
+                    </td>
+                    <td>
+                        Python - 17,36%<br>Django Framework - 7,30%<br>PostgreSQL - 6,30%<br>Git - 5,28%<br>Linux - 4,70%<br>SQL - 3,73%<br>JavaScript - 3,10%<br>MySQL - 2,39%<br>Flask - 1,73%<br>MongoDB - 1,71%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2018
-                </td>
-                <td>
-                    JavaScript - 2,33%<br>HTML - 1,67%<br>Git - 1,62%<br>CSS - 1,46%<br>PHP - 1,42%<br>SQL - 1,34%<br>MySQL
-                    - 1,30%<br>Ведение переговоров - 1,27%<br>Управление проектами - 1,13%<br>Работа в команде -
-                    1,10%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2018
+                    </td>
+                    <td>
+                        Python - 17,30%<br>Django Framework - 7,61%<br>PostgreSQL - 5,96%<br>Git - 5,19%<br>Linux - 4,58%<br>JavaScript - 3,95%<br>SQL - 3,70%<br>MySQL - 2,53%<br>Flask - 1,92%<br>HTML - 1,76%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2017
-                </td>
-                <td>
-                    JavaScript - 2,54%<br>HTML - 1,82%<br>PHP - 1,60%<br>CSS - 1,60%<br>Git - 1,58%<br>MySQL - 1,41%<br>Ведение
-                    переговоров - 1,28%<br>SQL - 1,25%<br>jQuery - 1,22%<br>HTML5 - 1,13%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2017
+                    </td>
+                    <td>
+                        Python - 16,78%<br>Django Framework - 7,35%<br>Linux - 5,43%<br>PostgreSQL - 5,39%<br>Git - 5,33%<br>JavaScript - 4,41%<br>SQL - 2,72%<br>MySQL - 2,47%<br>HTML - 1,74%<br>ООП - 1,54%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2016
-                </td>
-                <td>
-                    JavaScript - 2,35%<br>HTML - 1,70%<br>PHP - 1,57%<br>Git - 1,47%<br>Ведение переговоров - 1,46%<br>CSS
-                    - 1,42%<br>jQuery - 1,34%<br>MySQL - 1,32%<br>Работа в команде - 1,24%<br>HTML5 - 1,18%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2016
+                    </td>
+                    <td>
+                        Python - 17,36%<br>Django Framework - 7,98%<br>Linux - 5,49%<br>PostgreSQL - 4,95%<br>JavaScript - 4,61%<br>Git - 4,23%<br>SQL - 3,72%<br>MySQL - 2,54%<br>ООП - 1,84%<br>jQuery - 1,83%<br>
+                    </td>
+                </tr>
 
-            <tr>
-                <td>
-                    2015
-                </td>
-                <td>
-                    JavaScript - 3,30%<br>ООП - 2,53%<br>jQuery - 2,52%<br>HTML5 - 2,46%<br>HTML - 1,87%<br>C# -
-                    1,69%<br>MVC - 1,55%<br>.NET Framework - 1,53%<br>CSS - 1,48%<br>ASP.NET - 1,48%<br>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        2015
+                    </td>
+                    <td>
+                        Python - 13,57%<br>Django Framework - 7,04%<br>PostgreSQL - 4,36%<br>Linux - 4,36%<br>Celery - 3,85%<br>Django - 3,64%<br>Git - 3,60%<br>RabbitMQ - 3,56%<br>Python 2.7 - 3,22%<br>SQL (PostrgeSQL, Django ORM) - 3,10%<br>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
     {% else %}
-        <table class="table">
+        <table class="table table-bordered table-hover skills-table">
             <thead>
             <tr>
                 {% for header in headers %}
